# GolfGame

./: .gitignore  BALLDONTLIE_FREE_TIER_ANALYSIS.md  GolfGame.bat  README.md  config.yaml  config.yaml.example  generate_model_report.py  main.py  pyproject.toml  run_pipeline.py  test_html_report.py  test_playwright_simple.py  test_stats_predictor.py
.github/workflows/: analyze.yml  results.yml
api/: pipeline_runner.py  server.py
data/models/: egs_cut_classifier.joblib  egs_model_metadata.json  egs_position_regressor.joblib  egs_training_history.json  egs_v2_cut_classifier.joblib  egs_v2_metadata.json  egs_v2_position_regressor.joblib  egs_v2_training_history.json  model_metadata.json  stats_predictor_v1.joblib
frontend/: package-lock.json
frontend/src/: index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/accumulation/: AccumulationTab.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/types/: api.ts
src/: backtester.py  course_fit.py  database.py  egs_model_trainer.py  egs_training_report.py  egs_v2_report.py  egs_v2_trainer.py  espn_scraper.py  game_optimizer.py  group_analyzer.py  html_report.py  major_affinity.py  ml_predictor.py  model_backtest_report.py  odds_scraper.py  pga_stats_db.py  pga_stats_updater.py  pickem_features.py  pickem_scraper.py  picks_downloader.py  player_matcher.py  portal.py  post_tournament_analyzer.py  result_collector.py  result_scorer.py  review_report.py  stats_analyzer.py  stats_models.py  stats_scraper.py  theodds_scraper.py  tournament_fetcher.py  value_analyzer.py
(+6 files in other folders)
