[project]
name = "golf-game"
version = "0.1.0"
description = "PGA Tour betting analysis tool - SkyBet odds vs tournament performance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.1.0",
    "playwright>=1.40.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.0",
    "pyyaml>=6.0.0",
    "tabulate>=0.9.0",
]
